# curlviz

./: LICENSE  README.md  pyproject.toml
curlviz/: __init__.py  cli.py  config.py  drawer.py  gui.py  sheet.py  stream.py
curlviz/consts/: __init__.py  default.py
examples/: custom_configuration.py  from_json.py  pyproject.toml  stones.json
